# SentimentDashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  netlify.toml  pyproject.toml
apps/api/: Dockerfile
apps/api/app/: main.py  queries.py
apps/api/tests/: test_routes.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/compare/[ids]/: page.tsx
apps/web/app/hosts/[slug]/: page.tsx
apps/web/components/: leaderboard-table.tsx
apps/web/lib/: api.ts
config/: hosts.yaml
docs/: architecture.md  scoring.md
jobs/compute_scores/: __init__.py  main.py
jobs/compute_sentiment/: __init__.py  main.py
jobs/ingest_google_trends/: __init__.py  main.py
jobs/ingest_podcasts/: __init__.py  main.py
jobs/ingest_serp/: __init__.py  main.py
jobs/ingest_youtube/: __init__.py  main.py
migrations/: 001_init.sql
scripts/: run_migrations.py  seed_all.py
tests/: test_matching.py  test_scoring.py
